# finance-quant

./: .env.example  .gitignore  AUDIT_REPORT.md  BACKTEST_ENGINE_REVIEW.md  CLAUDE.md  CRITICAL_LIMITATION.md  DATA_AUDIT.md  GAP_ANALYSIS.md  HISTORICAL_BACKFILL.md  IMPROVEMENTS.md  LIVE_READINESS_CHECKLIST.md  Makefile  PERFORMANCE_REPORT.md  QUANT_FIXES.md  README.md  REPO_SCORE_EVALUATION.md  RISK_FRAMEWORK.md  STRATEGY_MEMO.md  STRATEGY_MEMO_GENERATED.md  STRATEGY_SPEC.md  TRADER_SUMMARY.md  TRADING_GAPS.md  V7_COMPLIANCE_REPORT.md  config.yaml  docker-compose.yml  master_prompt.py  pyproject.toml  requirements.txt
.claude/skills/: llm-council.md
.github/workflows/: backfill.yml  ci.yml  daily-predictions.yml  deploy-pages.yml  weekly-pipeline.yml
data/: prediction_history.json
data/signals/: signals_20251208.csv  signals_20251209.csv  signals_20251230.csv  signals_20251231.csv  signals_20260107.csv  signals_20260108.csv  signals_20260115.csv  signals_20260116.csv  signals_20260120.csv  signals_20260202.csv  signals_20260204.csv  signals_20260205.csv  signals_20260211.csv  signals_20260304.csv  signals_20260305.csv  signals_20260306.csv  signals_20260311.csv  signals_20260312.csv  signals_20260313.csv  signals_20260316.csv  signals_20260410.csv
site/: history.html  index.html  performance.html  pipeline.html
site/ticker/: GLD.html  IWM.html  XLB.html  XLC.html  XLE.html  XLI.html  XLK.html  XLP.html  XLRE.html  XLU.html  XLV.html  XLY.html
src/pipeline/: __init__.py  ab_testing.py  agent_coordinator.py  calibration.py  cli.py  compute_budget.py  conflict_resolution.py  db.py  deployment_pipeline.py  domain_checklist.py  drift_detection.py  ensemble.py  evaluation_matrix.py  experiment_registry.py  failure_mode_checks.py  governance.py  logging_config.py  model_search.py  report_generators.py  settings.py
src/pipeline/autoresearch/: __init__.py  build_dataset.py  prepare.py  program.md  runner.py  train_config.py
src/pipeline/backtesting/: __init__.py  bias_checks.py  capacity.py  event_engine.py  liquidity.py  monte_carlo.py  simulator.py  survivorship.py  transaction_costs.py  walk_forward.py
src/pipeline/dq/: __init__.py  data_quality_monitor.py  tests_sql.py
src/pipeline/eval/: __init__.py  evaluator.py  factor_neutrality.py  metrics.py  portfolio.py  regime.py  robustness.py  signal_alpha.py  stress.py
src/pipeline/execution/: __init__.py  alpaca_broker.py  broker.py  capital_guard.py  factory.py  paper_runner.py  position_monitor.py  position_register.py  realtime_feed.py  reconciler.py  runner.py  signal_executor.py  trade_journal.py
src/pipeline/extract/: __init__.py  _base.py  cftc_cot.py  earnings.py  etf_flows.py  factors_ff.py  fred.py  fred_enhanced.py  gdelt.py  options_data.py  polymarket.py  prices_daily.py  prices_daily_fixed.py  reddit_sentiment.py  sec_13f.py  sec_fundamentals.py  sec_insider.py  short_interest.py
src/pipeline/features/: __init__.py  feature_asof.py  feature_families.py  features_contract.py  risk_metrics.py  robust_stats.py  technical_indicators.py
src/pipeline/historical/: __init__.py  coverage.py  latency.py
src/pipeline/infrastructure/: __init__.py  async_pool.py  (+14 more)
tests/: __init__.py  conftest.py  test_alpaca_broker.py  test_backtesting.py  test_backtesting_extended.py  test_calibration.py  test_capacity.py  test_capital_guard.py  test_code_quality.py  test_corruption_handling.py  test_data_sources_validation.py  test_directive_v7.py  test_domain_checklists.py  test_dq.py  test_ensemble.py  test_eval_metrics.py  test_extractors.py  test_factor_neutrality.py  test_feature_asof.py  test_feature_families.py  test_follow_up_items.py  test_infrastructure.py  test_market_making.py  test_model_search.py  test_notifier.py  test_paper_runner.py  test_pipeline_dag.py  test_position_register.py  test_prediction_portfolio.py  test_realtime_feed.py  test_reconciler.py  test_risk_controls.py  test_risk_framework.py  test_risk_metrics.py  test_robust_stats.py  test_signal_alpha.py  test_signal_executor.py  test_signal_output.py  test_simulator.py  test_snapshots.py  (+7 more)
(+72 files in other folders)
